--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,7 @@ body{
     font-weight: 500;
     color:#fff;
     background-color: #022539;
+    text-align: center;
 }
 
 
@@ -179,6 +180,327 @@ body{
     font-size: 12px;
 }
 
+.backIcon{
+    background-color: #022539;
+    color:#fff!important;
+    padding:10px;
+    border:1px solid #fff;
+    border-radius: 50px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.backBtn{
+    padding-bottom: 20px;
+    display: flex;
+    gap:10px;
+    align-items: center;
+    text-decoration: none;
+    color:#000;
+}
+
+
+.listingSec{
+    border: 0px;
+    background-color: transparent;
+    border-radius: 0px;
+    gap:20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.listingSec h4{
+    font-size: 20px;
+    color:#022539;
+    text-align: center;
+}
+
+.topFilter{
+    display: flex;
+    gap:15px;
+    margin-bottom: 20px;
+}
+
+.editSrch{
+    width: 50%;
+    background-color: #87E261;
+    color:#022539;
+    border-radius: 5px;
+    border: 0px;
+}
+
+.topFilter .dropdown{
+    width: 50%;
+}
+
+.topFilter .dropdown-menu{
+    background-color: #022539;
+}
+
+.topFilter .dropdown-item{
+    color:#fff;
+}
+
+.topFilter .dropdown-item:hover{
+    color:#000;
+    background-color: #61E32B;
+}
+
+.topFilter .dropdown-toggle{
+    width: 100%;
+    background-color: #022539;
+    color:#fff;
+    font-size: 14px;
+}
+
+.cardListing{
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.cardItems{
+    display: flex;
+    flex-direction: column;
+    gap:30px;
+    margin-bottom: 40px;
+}
+
+.cardListing h5{
+    padding:10px;
+    background-color: #022539;
+    color:#fff;
+    text-align: center;
+    font-size: 13px;
+}
+
+.cardImg{
+    position: relative;
+}
+
+.cardImg img {
+    height: 140px;
+    object-fit: cover;
+    width: 100%;
+    z-index: 0;
+}
+
+.cardImg p{
+    position: absolute;
+    bottom:20px;
+    left: 20px;
+    background-color: #0000004b;
+    padding: 10px;
+    text-align: center;
+    font-size: 12px;
+    color:#fff;
+}
+
+.cardDetails{
+    padding:15px;
+    display: flex;
+    background-color: #E9E9E9;
+}
+
+
+.cardInfo, .cardBtns{
+    width: 50%;
+}
+
+.cardInfo{
+    display: flex;
+    flex-direction: column;
+   justify-content: center;
+}
+
+.cardInfo h6{
+    font-size:25px;
+    font-weight: 500;
+    color:#000;
+    
+}
+
+.cardInfo p{
+    font-size:10px;
+    font-weight: 400;
+    color:#000;
+}
+
+.cardInfo h4{
+    font-size:12px;
+    font-weight: 500;
+    color:#000;
+    text-align: left;
+}
+
+.cardInfo span{
+    font-size:8px;
+    font-weight: 400;
+    color:#000;
+}
+
+.cardBtns{
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+}
+
+.chevAv{
+    width: 100%;
+    padding:10px;
+    background-color: #61E32B;
+    color:#000;
+    font-size: 14px;
+    border: 0;
+    text-align: center;
+}
+
+.viewMr{
+    text-align: center;
+    width: 100%;
+    padding:10px;
+    background-color: #022539;
+    color:#fff;
+    font-size: 14px;
+    border: 0;
+    text-decoration: none;
+}
+
+.modal {
+    padding: 15px;
+}
+
+.modal-header{
+    background-color: #022539;
+    position: relative;
+}
+
+.modalDetails{
+    display: flex;
+    gap:15px;
+}
+
+.modalImg{
+    width: 30%;
+    height: 70px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.modalInfo{
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.modalInfo h2{
+    color:#fff;
+    font-weight: 600;
+    font-size:18px;
+}
+
+.modalInfo p{
+    color:#fff;
+    font-weight: 400;
+    font-size:14px;
+    text-align: left;
+}
+
+.modal-body{
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+}
+
+.modal-body h2{
+    text-align: center;
+    font-size: 17px;
+}
+
+.btnClose{
+    color:#fff;
+    border-radius: 50px;
+    border:2px solid #fff;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    font-size: 13px;
+    top:5px;
+    right: 5px;
+}
+
+.formSec, .filteringInputs{
+    display: flex;
+    flex-direction: column;
+    gap:15px;
+}
+
+.formSec p{
+    font-size: 13px;
+}
+
+.inputSec{
+    display: flex;
+    gap:15px;
+}
+
+.inputItem{
+    flex: auto;
+}
+
+.inputItem label{
+    font-size: 15px;
+    font-weight: 500;
+    color:#000;
+}
+
+.srchBtn{
+    padding:15px;
+    background-color: #61E32B;
+    border: 0;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.itemImg{
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    margin:20px 0px;
+}
+
+.carDetails{
+    display: flex;
+    gap:0;
+    background-color: #022539;
+    padding:15px;
+    border-radius: 10px;
+    margin:20px 0px!important;
+    align-items: center;
+}
+
+.carModel{
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    width: 45%;
+    color:#fff;
+}
+
+
+.carInfo{
+    font-size: 13px;
+    font-weight: 400;
+    width: 55%;
+    color:#fff;
+}
 
 
 @media only screen and (max-width:500px){
