--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,26 @@
 @font-face {
     font-family: 'General Sans';
-    src: url('../font/GeneralSans-Bold.otf') format('opentype'); /* Fallback for .otf */
+    src: url('../font/GeneralSans-Bold.otf') format('opentype');
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'General Sans';
-    src: url('../font/GeneralSans-Semibold.otf') format('opentype'); /* Fallback for .otf */
-    font-weight: 600;
+    src: url('../font/GeneralSans-Semibold.otf') format('opentype'); 
     font-style: normal;
 }
 
 @font-face {
     font-family: 'General Sans';
-    src: url('../font/GeneralSans-Medium.otf') format('opentype'); /* Fallback for .otf */
+    src: url('../font/GeneralSans-Medium.otf') format('opentype'); 
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'General Sans';
-    src: url('../font/GeneralSans-Regular.otf') format('opentype'); /* Fallback for .otf */
+    src: url('../font/GeneralSans-Regular.otf') format('opentype'); 
     font-weight: 400;
     font-style: normal;
 }
@@ -29,17 +28,17 @@
 
 
 h1, h2, h3, h4, h5, h6, p, a,
-div, section, select, input, textarea, ::placeholder{
+select, input, textarea, ::placeholder{
     font-family: 'General Sans';
     margin: 0!important;
 }
 
 
-*{
+/* *{
     padding:0px;
     margin:0px;
     box-sizing: border-box;
-}
+} */
 
 
 body{
@@ -502,7 +501,20 @@ body{
     color:#fff;
 }
 
-
-@media only screen and (max-width:500px){
-
+.carousel-indicators [data-bs-target]{
+    width: 10px!important;
+    height: 10px!important;
+    background-color: #61E32B!important;
+    border-radius: 50%!important;
+    opacity: .3;
 }
+
+
+.carousel-item img{
+    border-radius: 15px;
+}
+
+
+/* @media only screen and (max-width:500px){
+
+} */
