--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ body{
 }
 
 .mainSection{
-    max-width: 360px;
+    max-width: 100%;
     width: 100%;
 }
 
@@ -69,12 +69,16 @@ body{
 .secBanner h2{
     font-weight:700;
     text-align: center;
-    font-size: 35px;
+    font-size: 45px;
 }
 
 .secBanner p{
     font-weight:400;
     text-align: center;
+}
+
+.secBanner p b{
+    font-size: 25px;
 }
 
 .content-sec{
@@ -93,7 +97,7 @@ body{
 
 .content-sec h3{
     padding: 15px 15px;
-    font-size: 15px;
+    font-size: 25px;
     font-weight: 500;
     color:#fff;
     background-color: #022539;
@@ -160,14 +164,10 @@ body{
 
 .footerTop{
     display: flex;
-    flex-direction: column;
     gap:20px;
-    padding: 50px 20px;
+    padding: 50px 20px 20px;
 }
 
-.footerTop img{
-    width: 130px;
-}
 
 .footerBtm{
     background-color: #103B53;
@@ -220,11 +220,10 @@ body{
 .topFilter{
     display: flex;
     gap:15px;
-    margin-bottom: 20px;
 }
 
 .editSrch{
-    width: 50%;
+    width: 250px;
     background-color: #87E261;
     color:#022539;
     border-radius: 5px;
@@ -232,7 +231,7 @@ body{
 }
 
 .topFilter .dropdown{
-    width: 50%;
+    width: 250px;
 }
 
 .topFilter .dropdown-menu{
@@ -260,11 +259,23 @@ body{
     border-radius: 10px;
 }
 
+.topSec{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .cardItems{
     display: flex;
-    flex-direction: column;
-    gap:30px;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap:20px;
     margin-bottom: 40px;
+}
+
+.cardListing{
+    width: 47%;
 }
 
 .cardListing h5{
@@ -272,7 +283,7 @@ body{
     background-color: #022539;
     color:#fff;
     text-align: center;
-    font-size: 13px;
+    font-size: 20px;
 }
 
 .cardImg{
@@ -280,7 +291,7 @@ body{
 }
 
 .cardImg img {
-    height: 140px;
+    height: 250px;
     object-fit: cover;
     width: 100%;
     z-index: 0;
@@ -514,7 +525,64 @@ body{
     border-radius: 15px;
 }
 
+.footerImg{
+    width: 20%;
+    height:150px;
+    object-fit: contain;
+}
 
-/* @media only screen and (max-width:500px){
+.footerContent{
+    width:80%;
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+}
 
-} */
+
+@media only screen and (max-width:1024px){
+    .footerTop{
+        flex-direction: column;
+    }
+    
+    .content-sec h3{
+        font-size: 15px;
+    }
+
+    .footerImg{
+        width: 300px;
+        height: 100px;
+    }
+
+    .footerContent{
+        width: 100%;
+    }
+
+    .secBanner h2{
+        font-size: 35px;
+    }
+
+    .secBanner p b{
+        font-size: 18px;
+    }
+
+    .topFilter{
+        margin-bottom: 20px;
+    }
+
+
+    .topSec{
+        flex-direction: column-reverse;
+    }
+
+    .cardListing{
+        width: 100%;
+    }
+
+    .cardImg img {
+        height: 140px;
+    }
+
+    .cardListing h5{
+        font-size: 13px;
+    }
+}
